fixed horizontal scroll on mobile

--- a/src/assets/scss/main.css
+++ b/src/assets/scss/main.css
@@ -10823,6 +10823,10 @@ textarea.form-control-lg {
 
 /* custom */
 
+.container {
+  max-width: 100vw;
+}
+
 section {
   margin-top: 6em;
 }
